[tool.poetry]
name = "async-pydevd"
version = "0.1.0"
description = "pydevd with async/await support"
authors = ["Yurii Karabas <1998uriyyo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
nest-asyncio = "^1.5.1"
pydevd-pycharm = "^211.7142.13"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.10.1"
pytest-mock = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"