[tool.poetry]
name = "helpers"
version = "0.1.0"
description = "set of helpers scripts"
authors = ["Yurii Karabas <1998uriyyo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
black = "^20.8b1"
isort = "^5.7.0"
async-pydevd = { path = "../async-pydevd" }

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
helpers = "helpers:entry_point"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
