[tool.poetry]
name = "helpers"
version = "0.1.0"
description = "set of helpers scripts"
authors = ["Yurii Karabas <1998uriyyo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.1"
async-eval = { version = "^0.1.0", extras = ["pydevd-pycharm"] }

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
helpers = "helpers:entry_point"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
